SERVER-36225 Do not hold replication mutex when calling getMinValid